--- a/01-Posenet_P5.js/index.html
+++ b/01-Posenet_P5.js/index.html
@@ -7,9 +7,9 @@
     <title>Pose</title>
 </head>
 <body>
-</video>
-<script src="index1.js">
 
-</script>
+    <script src="index.js">
+
+    </script>
 </body>
 </html>
