--- a/02-Handpose_P5.js/index.html
+++ b/02-Handpose_P5.js/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
-    <title>Pose-Detection-P5</title>
+    <title>Handpose_p5.js</title>
 </head>
 <body>
-
     <script src="index.js">
 
     </script>
-
 </body>
 </html>
